# routes/api.php
@@ -21,8 +21,8 @@ Route::middleware('auth:sanctum')->group(function () {
     //cart
     Route::get('/shoping-cart', [CartController::class, 'shopingCart']);
     Route::post('/add-to-cart', [CartController::class, 'addToCart'])->middleware('throttle:cart');
-    
-    // Route::get('/remove-from-cart/{cartItem}', [CartController::class, 'removeFromCart'])->name('customer.sales-process.remove-from-cart')->middleware('throttle:cart');
+    Route::get('/remove-from-cart/{cartItem}', [CartController::class, 'removeFromCart'])->middleware(['throttle:cart', 'can:delete,cartItem']);
+
     // Route::post('/shoping-cart/update', [CartController::class, 'updateCart'])->name('customer.sales-process.update-shoping-cart');
     // Route::post('/shoping-cart/coupon', [CartController::class, 'coupon'])->name('customer.sales-process.coupon')->middleware('throttle:coupon');
 
